--- a/src/app/template/menu/menu.component.html
+++ b/src/app/template/menu/menu.component.html
@@ -1,1 +1,4 @@
-<p>menu works!</p>
+<ul>
+    <li><a routerLink="/app/dashboard">Dashboard</a></li>
+    <li><a routerLink="/app/customer">Customer</a></li>
+</ul>
